syntax = "proto3";

package yandex.cloud.priv.datatransfer.v1.endpoint;

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/datatransfer/v1/endpoint;tm_server_endpoint";

import "yandex/cloud/priv/datatransfer/v1/endpoint/common.proto";
import "yandex/cloud/priv/datatransfer/v1/endpoint/yds.proto";
import "yandex/cloud/priv/sensitive.proto";

enum KafkaMechanism {
    KAFKA_MECHANISM_UNSPECIFIED = 0;
    KAFKA_MECHANISM_SHA256 = 1;
    KAFKA_MECHANISM_SHA512 = 2;
}
message KafkaConnectionOptions {
    oneof connection {
        string cluster_id = 1;
        OnPremiseKafka on_premise = 2;
    }
}
message OnPremiseKafka {
    repeated string broker_urls = 1;
    bool ssl_enabled = 2;
    string pem_file_content = 3;
    // Network interface for endpoint. If none will assume public ipv4
    string subnet_id = 4;
}
message KafkaAuth {
    oneof security {
        KafkaSaslSecurity sasl = 1;
        NoAuth no_auth = 2;
    }
}
message KafkaSaslSecurity {
    string user = 1;
    string password = 2 [(sensitive) = true];
    KafkaMechanism mechanism = 3;
}
message NoAuth {
}
message KafkaSource {
    KafkaConnectionOptions connection = 1;
    KafkaAuth auth = 2;
    repeated string security_groups = 3;
    string topic_name = 4;
    DataTransformationOptions transformer = 5;
    ConvertRecordOptions converter = 6;
}
message KafkaTarget {
    KafkaConnectionOptions connection = 1;
    KafkaAuth auth = 2;
    repeated string security_groups = 3;
    string topic_name = 4;
    string topic_prefix = 5;
}
