syntax = "proto3";

package yandex.cloud.priv.datatransfer.v1.endpoint;

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/datatransfer/v1/endpoint;tm_server_endpoint";

import "yandex/cloud/priv/datatransfer/v1/endpoint/common.proto";

enum LineSplitter {
    LINE_SPLITTER_UNSPECIFIED = 0;
    NEW_LINE = 1;
    NO_SPLITTER = 2;
}
message FieldList {
    repeated ColSchema fields = 2;
}
message DataSchema {
    oneof schema {
        FieldList fields = 2;
        string json_fields = 1;
        // TEST_VISIBILITY_NOT_VISIBLE: TODO remove this field from kafka source, this
        // field don't using and cause endpoint saving failing
        string logfeller_schema_id = 3;
    }
}
message ConvertRecordOptions {
    ParsingFormat format = 1;
    DataSchema data_schema = 3;
    bool add_rest_column = 2;
    bool null_keys_allowed = 4;
}
message YDSSource {
    // for dedicated db
    string endpoint = 20;
    string database = 1;
    string stream = 2;
    // SA which has read access to the stream.
    string service_account_id = 8;
    // transform -> split -> convert -> sinker
    DataTransformationOptions transformer = 5;
    ConvertRecordOptions converter = 4;
    string object_storage_backup_bucket = 32;
    LineSplitter line_splitter = 17;
    ObjectStorageBackupMode backup_mode = 7;
}
